probe class, generalised clustering, etc.

--- a/localised_spikes_clustered.ipynb
+++ b/localised_spikes_clustered.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from hs2 import herdingspikes\n",
+    "from probe import NeuralProbe\n",
+    "import numpy as np\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -18,16 +20,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_path = 'data/rawDataSample.bin'\n",
     "# data = h5py.File(data_path, 'r')\n",
     "# data = np.fromfile(data_path, dtype=np.int16).reshape((1800000,385))\n",
     "\n",
-    "H = herdingspikes(datapath=data_path)"
+    "H = herdingspikes()"
    ]
   },
   {
@@ -44,24 +44,29 @@
     "# MinSl length considered for determining avg. spike amplitude\n",
     "# AHPthr signal should go below that threshold within MaxSl-Slmin frames\n",
     "\n",
-    "num_channels = 385\n",
-    "num_recording_channels = 374\n",
-    "spike_delay = 5\n",
-    "spike_peak_duration = 5\n",
-    "noise_duration = 2\n",
-    "noise_amp = 80000\n",
-    "max_neighbors = 14\n",
+    "NeuroPixel = NeuralProbe(num_channels = 385,\n",
+    "                         spike_delay = 5,\n",
+    "                         spike_peak_duration = 5,\n",
+    "                         noise_duration = 2,\n",
+    "                         noise_amp = 80000,\n",
+    "                         fps = 30000,\n",
+    "                         positions_path=\"positions\",\n",
+    "                         neighbors_path=\"neighbormatrix\")\n",
+    "\n",
     "to_localize = True\n",
     "cutout_length = 40\n",
-    "fps = 30000\n",
-    "threshold = 20 #20\n",
-    "\n",
-    "H.DetectFromRaw(num_channels, num_recording_channels, spike_delay,\n",
-    "               spike_peak_duration, noise_duration, noise_amp, max_neighbors,\n",
-    "               to_localize, cutout_length, fps, threshold, maa=0,\n",
-    "               maxsl=12, minsl=3, ahpthr=0)\n",
-    "\n",
-    "# H.LoadDetected()"
+    "threshold = 20 #20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "NeuroPixel.Show(figwidth=2, showNeighbors=[-20])"
    ]
   },
   {
@@ -70,7 +75,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H.PlotTracesChannels(1008)"
+    "H.DetectFromRaw(data_path, NeuroPixel,\n",
+    "                to_localize, cutout_length, threshold,\n",
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
+    "\n",
+    "# # OR\n",
+    "\n",
+    "H.LoadDetected(NeuroPixel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H.PlotTracesChannels(data_path, 1008)"
    ]
   },
   {
@@ -86,11 +106,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "H.CombinedClustering(alpha=40,\n",
+    "                    bandwidth = 20, bin_seeding=True, min_bin_freq=10,\n",
+    "                    pca_ncomponents=2, pca_whiten=True,\n",
+    "                    n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "H.CombinedMeanShift(bandwidth=20, alpha=40, bin_seeding=True,\n",
-    "                    min_bin_freq=10, pca_ncomponents=2, pca_whiten=True,\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "H.PlotAll(invert=True, s=10)\n",
+    "plt.xlim((1350,1600))\n",
+    "plt.title(\"MeanShift, bandwidth=20, min_bin_freq=10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import DBSCAN\n",
+    "H.CombinedClustering(eps=8, alpha=40, clustering_algorithm=DBSCAN,\n",
+    "                    min_samples=5, pca_ncomponents=2, pca_whiten=True,\n",
     "                    n_jobs=-1)"
    ]
   },
@@ -103,7 +152,8 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 5))\n",
-    "H.PlotAll(invert=True, s=10, show_labels=True)\n",
+    "H.PlotAll(invert=True, s=10)\n",
+    "plt.title(\"DBSCAN eps=8, min_samples=5\")\n",
     "plt.xlim((1350,1600))\n"
    ]
   },
