updated readme, removed format argument in detectÂ

--- a/localised_spikes_clustered.ipynb
+++ b/localised_spikes_clustered.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "H.DetectFromRaw(data_path,\n",
     "                to_localize, cutout_start, cutout_end, threshold,\n",
-    "                maa=0, maxsl=12, minsl=3, ahpthr=0, data_format=data_format)\n",
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
     "\n",
     "# # OR\n",
     "\n",
