--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from hs2 import herdingspikes\n",
-    "from Probe import NeuralProbe, NeuroPixel, BioCam\n",
-    "import numpy as np\n",
+    "from probe import NeuroPixel\n",
+    "from sklearn.cluster import DBSCAN\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -52,15 +52,11 @@
     "\n",
     "# data_path = '/home/cole/neuropixeldata/rawDataSample.bin'\n",
     "data_path = '/disk/scratch/mhennig/neuropixel/data/rawDataSample.bin'\n",
-    "data_format = 'flat'\n",
-    "\n",
-    "# data_path = '/disk/scratch/mhennig/P29_16_07_14/P29_16_05_14_retina02_left_stim3_fullarray_fullfieldHDF5.brw'\n",
-    "# data_format = 'biocam'\n",
     "\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
-    "threshold = 12 #20"
+    "threshold = 12"
    ]
   },
   {
@@ -141,7 +137,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.cluster import DBSCAN\n",
     "H.CombinedClustering(eps=8, alpha=40, clustering_algorithm=DBSCAN,\n",
     "                    min_samples=5, pca_ncomponents=2, pca_whiten=True,\n",
     "                    n_jobs=-1)"
@@ -174,15 +169,6 @@
     "\n",
     "H.PlotShapes(units)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -190,6 +176,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
