moved more things to probe -- not currently working

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,23 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# data = h5py.File(data_path, 'r')\n",
-    "# data = np.fromfile(data_path, dtype=np.int16).reshape((1800000,385))\n",
-    "\n",
-    "Probe = NeuroPixel(fps=30000)\n",
-    "# Probe = BioCam()\n",
-    "H = herdingspikes(Probe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -57,6 +41,44 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# data = h5py.File(data_path, 'r')\n",
+    "# data = np.fromfile(data_path, dtype=np.int16).reshape((1800000,385))\n",
+    "\n",
+    "Probe = NeuroPixel(fps=30000, data_file_path=data_path)\n",
+    "# Probe = BioCam()\n",
+    "H = herdingspikes(Probe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "374"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Probe.num_recording_channels"
    ]
   },
   {
