implemented read functions -- now working

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -34,7 +34,6 @@
     "# MinSl length considered for determining avg. spike amplitude\n",
     "# AHPthr signal should go below that threshold within MaxSl-Slmin frames\n",
     "\n",
-    "# data_path = '/home/cole/neuropixeldata/rawDataSample.bin'\n",
     "data_path = '/disk/scratch/mhennig/neuropixel/data/rawDataSample.bin'\n",
     "\n",
     "to_localize = True\n",
@@ -45,40 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# data = h5py.File(data_path, 'r')\n",
-    "# data = np.fromfile(data_path, dtype=np.int16).reshape((1800000,385))\n",
-    "\n",
     "Probe = NeuroPixel(fps=30000, data_file_path=data_path)\n",
-    "# Probe = BioCam()\n",
+    "\n",
     "H = herdingspikes(Probe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "374"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Probe.num_recording_channels"
    ]
   },
   {
@@ -89,8 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "H.DetectFromRaw(data_path,\n",
-    "                to_localize, cutout_start, cutout_end, threshold,\n",
+    "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
     "\n",
     "# # OR\n",
