PlotTracesChannels works for BioCam

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -79,7 +79,8 @@
    },
    "outputs": [],
    "source": [
-    "H.PlotTracesChannels(data_path, 1022)"
+    "#plt.figure(figsize=(20,10))\n",
+    "H.PlotTracesChannels(data_path, 3021)"
    ]
   },
   {
