Can now specify the file name where the processed spikes are stored

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -23,7 +21,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -34,20 +31,26 @@
     "# MinSl length considered for determining avg. spike amplitude\n",
     "# AHPthr signal should go below that threshold within MaxSl-Slmin frames\n",
     "\n",
-    "data_path = '/disk/scratch/mhennig/neuropixel/data/rawDataSample.bin'\n",
+    "user = \"Cole\"\n",
+    "\n",
+    "if user == \"Hennig\":\n",
+    "    data_path = '/disk/scratch/mhennig/neuropixel/data/rawDataSample.bin'\n",
+    "elif user == \"Martino\":\n",
+    "    data_path = \"data/rawDataSample.bin\"\n",
+    "else:\n",
+    "    data_path = '/home/cole/neuropixeldata/rawDataSample.bin'\n",
     "\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
-    "threshold = 12"
+    "threshold = 12\n",
+    "file_name = 'ProcessedSpikes'\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Probe = NeuroPixel(fps=30000, data_file_path=data_path)\n",
@@ -58,12 +61,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold,\n",
+    "H.DetectFromRaw(to_localize,file_name, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
     "\n",
     "# # OR\n",
@@ -74,21 +75,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#plt.figure(figsize=(20,10))\n",
-    "H.PlotTracesChannels(data_path, 3021)"
+    "H.PlotTracesChannels(data_path, 3023)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 4))\n",
@@ -99,7 +96,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -113,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 5))\n",
@@ -128,7 +122,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -142,7 +135,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -156,9 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "units = (121,4)\n",
@@ -183,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
