Switched masking channels to the probe object

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -22,7 +20,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -33,7 +30,7 @@
     "# MinSl length considered for determining avg. spike amplitude\n",
     "# AHPthr signal should go below that threshold within MaxSl-Slmin frames\n",
     "\n",
-    "user = \"Martino\"\n",
+    "user = \"Cole\"\n",
     "\n",
     "if user == \"Hennig\":\n",
     "    data_path = '/disk/scratch/mhennig/neuropixel/data/rawDataSample.bin'\n",
@@ -46,7 +43,7 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 12\n",
-    "masked_channels = None #Can put a list of channel numbers you want masked\n",
+    "masking_channels = [35, 46] #Can put a list of channel numbers you want masked\n",
     "file_name = 'ProcessedSpikes'\n"
    ]
   },
@@ -56,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probe = NeuroPixel(fps=30000, data_file_path=data_path)\n",
+    "Probe = NeuroPixel(data_file_path=data_path, fps=30000, masked_channels = masking_channels)\n",
     "\n",
     "H = herdingspikes(Probe)"
    ]
@@ -67,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold, masked_channels,\n",
+    "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
     "\n",
     "# # OR\n",
@@ -138,7 +135,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -163,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
