--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -49,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +77,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1\n",
+      " 1 1 1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "# Sampling rate: 30000\n",
+      "# Localization On\n",
+      "# Masking Channels: [35, 46]\n",
+      "# Number of recorded channels: 385\n",
+      "# Analysing frames: 1800000, Seconds:60.0\n",
+      "# Frames before spike in cutout: 30\n",
+      "# Frames after spike in cutout: 66\n",
+      "# tcuts: 42 55\n",
+      "# tInc: 200000\n",
+      "# Analysing 200000 frames; -42 200055\n",
+      "# Analysing 200000 frames; 199958 400055\n",
+      "# Analysing 200000 frames; 399958 600055\n",
+      "# Analysing 200000 frames; 599958 800055\n",
+      "# Analysing 200000 frames; 799958 1000055\n",
+      "# Analysing 200000 frames; 999958 1200055\n",
+      "# Analysing 200000 frames; 1199958 1400055\n",
+      "# Analysing 200000 frames; 1399958 1600055\n",
+      "# Analysing 199945 frames; 1599958 1800000\n",
+      "# Time taken for detection: 0:00:14.441300\n",
+      "# Time per frame: 0:00:00.008023\n",
+      "# Time per sample: 0:00:00.000021\n",
+      "Detected and read 384950 spikes.\n"
+     ]
+    }
+   ],
    "source": [
     "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
