fixed save file; fixed PlotTracesChannels

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -52,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Probe = NeuroPixel(fps=30000, data_file_path=data_path)\n",
@@ -67,11 +67,23 @@
    "outputs": [],
    "source": [
     "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold,\n",
-    "                maa=0, maxsl=12, minsl=3, ahpthr=0)\n",
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0, file_path=file_name)\n",
     "\n",
     "# # OR\n",
     "\n",
-    "# H.LoadDetected()"
+    "#H.LoadDetected(file_name, cutout_length=cutout_end-cutout_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,10))\n",
+    "H.PlotTracesChannels(385280, cutout_start=10)"
    ]
   },
   {
@@ -80,14 +92,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.figure(figsize=(20,10))\n",
-    "H.PlotTracesChannels(3025)"
+    "plt.figure(figsize=(20,10))\n",
+    "H.PlotTracesChannels(50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 4))\n",
@@ -98,6 +112,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -111,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 5))\n",
@@ -124,6 +141,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -151,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "units = (121,4)\n",
