some notebook changes?

--- a/localised_spikes_clustered-neuropixel.ipynb
+++ b/localised_spikes_clustered-neuropixel.ipynb
@@ -30,7 +30,7 @@
     "# MinSl length considered for determining avg. spike amplitude\n",
     "# AHPthr signal should go below that threshold within MaxSl-Slmin frames\n",
     "\n",
-    "user = \"Cole\"\n",
+    "user = \"Martino\"\n",
     "\n",
     "if user == \"Hennig\":\n",
     "    data_path = '/disk/scratch/mhennig/neuropixel/data/rawDataSample.bin'\n",
@@ -42,10 +42,10 @@
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
-    "threshold = 7\n",
+    "threshold = 12\n",
     "# masking_channels = [36, 75, 112,151,188,227,264,303,340,379,384]#Can put a list of channel numbers you want masked\n",
     "masking_channels = [384, 344, 112, 227, 151, 264,  75, 188,  36, 303]#Can put a list of channel numbers you want masked\n",
-    "file_name = 'ProcessedSpikes'\n"
+    "file_name = 'ProcessedSpikes_neuropixel'\n"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probe = NeuroPixel(data_file_path=data_path, fps=30000, masked_channels = masking_channels)\n",
+    "Probe = NeuroPixel(data_file_path=data_path, fps=30000, masked_channels=masking_channels)\n",
     "\n",
     "H = herdingspikes(Probe)"
    ]
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold,\n",
-    "                maa=0, maxsl=12, minsl=3, ahpthr=0, verbose=True)#, file_path=file_name)\n",
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)\n",
     "\n",
     "# # OR\n",
     "\n",
@@ -86,6 +86,13 @@
     "H.PlotTracesChannels(35, ax=ax, window_size=100, cutout_start=10)\n",
     "# plt.axis('equal')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -459,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
