--- a/localised_spikes_clustered-mea1k.ipynb
+++ b/localised_spikes_clustered-mea1k.ipynb
@@ -9,15 +9,27 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "from hs2 import herdingspikes\n",
-    "from probe import Mea1k\n",
-    "from sklearn.cluster import DBSCAN\n",
-    "\n",
     "%matplotlib inline"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use of the `Detection` class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hs2 import Detection\n",
+    "from probe import Mea1k"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -25,13 +37,15 @@
    },
    "outputs": [],
    "source": [
+    "# raw data location\n",
     "data_path = 'data/Trace_20171218_16_26_42.raw.h5'\n",
     "\n",
+    "# detection parameters\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 7\n",
-    "out_file_name = 'ProcessedSpikes_mea1k'"
+    "file_name = 'results/ProcessedSpikes_mea1k'"
    ]
   },
   {
@@ -40,8 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probe = Mea1k(data_path, fps=20000, number_of_frames=4450600)\n",
-    "H = herdingspikes(Probe)"
+    "Probe = Mea1k(data_path)\n",
+    "H = Detection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
+    "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)"
    ]
   },
   {
@@ -50,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probe.show(figwidth=20)"
+    "Probe.show(figwidth=10)"
    ]
   },
   {
@@ -59,9 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# H.DetectFromRaw(to_localize, cutout_start, cutout_end, threshold, maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=out_file_name)\n",
-    "# OR\n",
-    "H.LoadDetected(out_file_name, cutout_start + cutout_end + 1)"
+    "H.DetectFromRaw()"
    ]
   },
   {
@@ -70,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.figure(figsize=(20, 10))\n",
-    "H.PlotTracesChannels(52)"
+    "H.LoadDetected()"
    ]
   },
   {
@@ -80,9 +92,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "H.PlotTracesChannels(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(10, 10))\n",
     "H.PlotAll(invert=True, s=1, alpha=0.05)\n",
-    "plt.axis('equal')"
+    "plt.axis('equal');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use of the `Clustering` class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hs2 import Clustering\n",
+    "from sklearn.cluster import DBSCAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load from file\n",
+    "C = Clustering(['results/ProcessedSpikes_mea1k.bin', 'results/ProcessedSpikes_mea1k.bin'], cutout_length=41)\n",
+    "\n",
+    "# Or if the spikes are already in memory\n",
+    "# simply load from the Detection class\n",
+    "#C = Clustering(H)"
    ]
   },
   {
@@ -93,15 +149,10 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
-    "# H.CombinedClustering(alpha=40,\n",
-    "#                     bandwidth = 20, bin_seeding=True, min_bin_freq=10,\n",
-    "#                     pca_ncomponents=2, pca_whiten=True,\n",
-    "#                     n_jobs=-1)\n",
-    "H.CombinedClustering(alpha=0.4,\n",
-    "                    bandwidth=None, bin_seeding=True, min_bin_freq=10,\n",
-    "                    pca_ncomponents=2, pca_whiten=True,\n",
-    "                    n_jobs=-1)"
+    "C.ShapePCA(pca_ncomponents=2, pca_whiten=True)\n",
+    "\n",
+    "C.CombinedClustering(alpha=0.4, bandwidth=0.3, bin_seeding=True,\n",
+    "                     min_bin_freq=100, n_jobs=-1)"
    ]
   },
   {
@@ -110,19 +161,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H.clusters.Color"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(10, 10))\n",
-    "H.PlotAll(invert=True, s=1)\n",
-    "# plt.xlim((1350,1600))\n",
-    "plt.title(\"MeanShift, bandwidth=.3, min_bin_freq=10\")"
+    "C.PlotAll(invert=True, s=1, show_labels=True)\n",
+    "plt.title(\"MeanShift, bandwidth=.3, min_bin_freq=10\");\n",
+    "plt.xlim([0,25])\n",
+    "plt.ylim([0,25])"
    ]
   },
   {
@@ -133,9 +178,8 @@
    },
    "outputs": [],
    "source": [
-    "H.CombinedClustering(eps=0.2, alpha=0.4, clustering_algorithm=DBSCAN,\n",
-    "                    min_samples=5, pca_ncomponents=2, pca_whiten=True,\n",
-    "                    n_jobs=-1)"
+    "C.CombinedClustering(eps=0.2, alpha=0.4, clustering_algorithm=DBSCAN,\n",
+    "                    min_samples=5, n_jobs=-1)"
    ]
   },
   {
@@ -147,9 +191,9 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(12, 12))\n",
-    "H.PlotAll(invert=True, s=1)\n",
-    "plt.title(\"DBSCAN eps=8, min_samples=5\")\n",
-    "# plt.xlim((1350,1600))\n"
+    "C.PlotAll(invert=True, s=1)\n",
+    "plt.title(\"DBSCAN eps=0.2, min_samples=5\")\n",
+    "# plt.xlim((1350,1600))"
    ]
   },
   {
@@ -158,9 +202,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units = (0,1,10)\n",
+    "units = (0, 1, 10, 100, 1000)\n",
     "\n",
-    "H.PlotShapes(units)"
+    "C.PlotShapes(units)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "- PlotAll for clustered DONE\n",
+    "- Save in different hdf5 files\n",
+    "- Clean savehdf5 (sampling problem)\n",
+    "- Save the entire class\n",
+    "- DBSCAN creates empty clusters\n",
+    "- Detection gives spikes far from chip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C.SaveHDF5([\"results/f1.hdf5\", \"results/f2.hdf5\"])"
    ]
   },
   {
