saving function now works

--- a/localised_spikes_clustered-mea1k.ipynb
+++ b/localised_spikes_clustered-mea1k.ipynb
@@ -92,7 +92,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(15, 10))\n",
     "H.PlotTracesChannels(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H.spikes.Shape[10].mean()"
    ]
   },
   {
@@ -205,19 +215,6 @@
     "units = (0, 1, 10, 100, 1000)\n",
     "\n",
     "C.PlotShapes(units)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO:\n",
-    "- PlotAll for clustered DONE\n",
-    "- Save in different hdf5 files\n",
-    "- Clean savehdf5 (sampling problem)\n",
-    "- Save the entire class\n",
-    "- DBSCAN creates empty clusters\n",
-    "- Detection gives spikes far from chip"
    ]
   },
   {
