added documentation, checked notebooks, etc.

--- a/localised_spikes_clustered-mea1k.ipynb
+++ b/localised_spikes_clustered-mea1k.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use of the `Detection` class"
+    "# Use of the `HSDetection` class"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hs2 import Detection\n",
+    "from hs2 import HSDetection\n",
     "from probe import Mea1k"
    ]
   },
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "Probe = Mea1k(data_path)\n",
-    "H = Detection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
+    "H = HSDetection(Probe, to_localize, cutout_start, cutout_end, threshold,\n",
     "                maa=0, maxsl=12, minsl=3, ahpthr=0, out_file_name=file_name)"
    ]
   },
@@ -92,7 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(15, 10))\n",
     "H.PlotTracesChannels(100)"
    ]
   },
@@ -124,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use of the `Clustering` class"
+    "# Use of the `HSClustering` class"
    ]
   },
   {
@@ -133,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hs2 import Clustering\n",
+    "from hs2 import HSClustering\n",
     "from sklearn.cluster import DBSCAN"
    ]
   },
@@ -144,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Load from file\n",
-    "C = Clustering(['results/ProcessedSpikes_mea1k.bin', 'results/ProcessedSpikes_mea1k.bin'], cutout_length=41)\n",
+    "C = HSClustering(['results/ProcessedSpikes_mea1k.bin'], cutout_length=41)\n",
     "\n",
     "# Or if the spikes are already in memory\n",
     "# simply load from the Detection class\n",
@@ -212,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units = (0, 1, 10, 100, 1000)\n",
+    "units = (0, 1, 10, 100)\n",
     "\n",
     "C.PlotShapes(units)"
    ]
@@ -223,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C.SaveHDF5([\"results/f1.hdf5\", \"results/f2.hdf5\"])"
+    "C.SaveHDF5([\"results/f1.hdf5\"])"
    ]
   },
   {
