Commented the parameter optimisation class, and fixed set parameter assignment for the clustering parameters.

--- a/parameter_optimisation.ipynb
+++ b/parameter_optimisation.ipynb
@@ -98,14 +98,14 @@
     "from parameter_optimisation import OptimiseParameters\n",
     "\n",
     "# Define parameters to optimise over\n",
-    "detec_params_to_opt = {'threshold': (50,300),\n",
+    "detec_params_to_opt = {'threshold': (50, 300),\n",
     "                       'ahpthr': (0, 20),\n",
-    "                       'maxsl': (0,30)\n",
+    "                       'maxsl': (0, 30)\n",
     "                       }\n",
     "\n",
-    "clust_params_to_opt = {'bandwidth': (0.,4.),\n",
+    "clust_params_to_opt = {'bandwidth': (0., 4.),\n",
     "                       'alpha': (0., 5.),\n",
-    "                       'n_pca': (1,10)\n",
+    "                       'pca_ncomponents': (1, 10)\n",
     "                       }\n",
     "\n",
     "detect_results_name = 'result_optim_params_detect' \n",
