--- a/notebooks/localised_spikes_clustered-mea1k.ipynb
+++ b/notebooks/localised_spikes_clustered-mea1k.ipynb
@@ -25,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
     "from hs2 import HSDetection\n",
     "from probe import Mea1k"
    ]
@@ -45,7 +47,7 @@
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 7\n",
-    "file_name = 'results/ProcessedSpikes_mea1k'"
+    "file_name = 'ProcessedSpikes_mea1k'"
    ]
   },
   {
