small changes to notebooks

--- a/notebooks/localised_spikes_clustered-neuropixel.ipynb
+++ b/notebooks/localised_spikes_clustered-neuropixel.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +16,9 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from hs2 import HSDetection\n",
-    "from probe import NeuroPixel"
+    "from probe import NeuroPixel\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -40,14 +30,14 @@
    "outputs": [],
    "source": [
     "# raw data location\n",
-    "data_path = 'data/rawDataSample.bin'\n",
+    "data_path = '/disk/scratch/martino/Clustering/spike_sorting_neuropixel/data/rawDataSample.bin'\n",
     "\n",
     "# detection parameters\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 12\n",
-    "file_name = 'ProcessedSpikes_neuropixel'"
+    "file_name = '../data/ProcessedSpikes_neuropixel'"
    ]
   },
   {
@@ -96,17 +86,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(15, 10))\n",
     "H.PlotTracesChannels(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "H.spikes.Shape[10].mean()"
    ]
   },
   {
@@ -117,9 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.figure(figsize=(10, 10))\n",
+    "plt.figure(figsize=(20, 2))\n",
     "H.PlotAll(invert=True, s=1, alpha=0.05)\n",
     "plt.axis('equal');"
    ]
@@ -158,14 +139,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C.ShapePCA(pca_ncomponents=2, pca_whiten=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "C.ShapePCA(pca_ncomponents=2, pca_whiten=True)\n",
-    "\n",
-    "C.CombinedClustering(alpha=0.4, bandwidth=0.3, bin_seeding=True,\n",
+    "C.CombinedClustering(alpha=0.4, bandwidth=3., bin_seeding=True,\n",
     "                     min_bin_freq=100, n_jobs=-1)"
    ]
   },
@@ -204,10 +192,10 @@
    },
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 12))\n",
+    "plt.figure(figsize=(20, 2))\n",
     "C.PlotAll(invert=True, s=1)\n",
     "plt.title(\"DBSCAN eps=0.2, min_samples=5\")\n",
-    "# plt.xlim((1350,1600))"
+    "plt.axis('equal');"
    ]
   },
   {
@@ -216,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units = (0, 1, 10, 100, 1000)\n",
+    "units = (0, 1, 10, 100)\n",
     "\n",
     "C.PlotShapes(units)"
    ]
@@ -254,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
