--- a/notebooks/localised_spikes_clustered-mea1k.ipynb
+++ b/notebooks/localised_spikes_clustered-mea1k.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +16,9 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from hs2 import HSDetection\n",
-    "from probe import Mea1k"
+    "from probe import Mea1k\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -40,14 +30,14 @@
    "outputs": [],
    "source": [
     "# raw data location\n",
-    "data_path = 'data/Trace_20171218_16_26_42.raw.h5'\n",
+    "data_path = '/disk/scratch/martino/Clustering/spike_sorting_neuropixel/data/Trace_20171218_16_26_42.raw.h5'\n",
     "\n",
     "# detection parameters\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 30\n",
     "threshold = 7\n",
-    "file_name = 'ProcessedSpikes_mea1k'"
+    "file_name = '../data/ProcessedSpikes_mea1k'"
    ]
   },
   {
@@ -100,15 +90,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "H.spikes.Shape[10].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -145,11 +126,11 @@
    "outputs": [],
    "source": [
     "# Load from file\n",
-    "C = HSClustering(['results/ProcessedSpikes_mea1k.bin'], cutout_length=41)\n",
+    "#C = HSClustering(['../data/ProcessedSpikes_mea1k.bin'], cutout_length=41)\n",
     "\n",
     "# Or if the spikes are already in memory\n",
     "# simply load from the Detection class\n",
-    "#C = Clustering(H)"
+    "C = HSClustering(H)"
    ]
   },
   {
@@ -162,7 +143,7 @@
    "source": [
     "C.ShapePCA(pca_ncomponents=2, pca_whiten=True)\n",
     "\n",
-    "C.CombinedClustering(alpha=0.4, bandwidth=0.3, bin_seeding=True,\n",
+    "C.CombinedClustering(alpha=0.4, bandwidth=1.8, bin_seeding=True,\n",
     "                     min_bin_freq=100, n_jobs=-1)"
    ]
   },
@@ -213,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units = (0, 1, 10, 100)\n",
+    "units = (0, 1, 10)\n",
     "\n",
     "C.PlotShapes(units)"
    ]
@@ -251,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
