--- a/notebooks/localised_spikes_hierlemann_visapy.ipynb
+++ b/notebooks/localised_spikes_hierlemann_visapy.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,9 +16,7 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from hs2 import HSDetection\n",
-    "from probe import HierlmannVisapyEmulationProbe\n",
-    "import numpy as np\n",
-    "import h5py"
+    "from probe import HierlmannVisapyEmulationProbe"
    ]
   },
   {
@@ -42,14 +28,14 @@
    "outputs": [],
    "source": [
     "# raw data location\n",
-    "data_path = 'rawHierlmannVisapy.npy'\n",
+    "data_path = '/disk/scratch/mhennig/ViSAPy/rawHierlmannVisapy.npy'\n",
     "\n",
     "# detection parameters\n",
     "to_localize = True\n",
     "cutout_start = 10\n",
     "cutout_end = 20\n",
     "threshold = 12\n",
-    "file_name = 'ProcessedSpikes_visapy'"
+    "file_name = '../data/ProcessedSpikes_visapy'"
    ]
   },
   {
@@ -67,7 +53,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -103,24 +89,6 @@
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(15, 10))\n",
     "H.PlotTracesChannels(510)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def closestChannels(neurons):\n",
-    "    closest_channels = []\n",
-    "    for neuron in neurons:\n",
-    "        dists = np.sqrt((elec_x-somapos[0][neuron][0])**2+(elec_y-somapos[0][neuron][1])**2)\n",
-    "        chinds = np.argsort(dists) # sort by distance, first is closest\n",
-    "        closest_channels.append((neuron, chinds[0]))\n",
-    "    return closest_channels\n",
-    "plt.figure(figsize=(15, 10))\n",
-    "print(closestChannels([50])[0][1])\n",
-    "H.PlotData(50, 10308, closestChannels([13])[0][1])"
    ]
   },
   {
@@ -191,13 +159,6 @@
    "source": [
     "C.SaveHDF5(\"f1.hdf5\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -216,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
